# RGFuzz

./: .dockerignore  .gitignore  .gitmodules  README.md
data/: coverage-data-single-others-final.xlsx  wasmtime-coverage-data-single-final.xlsx
docker/: Dockerfile  build.sh  docker-compose.yml  run.sh
docker/fairness/: Dockerfile
docker/jsc/: Dockerfile
docker/sm/: Dockerfile
docker/v8/: Dockerfile
docker/wamr/: Dockerfile  README
docker/wasmedge/: Dockerfile
docker/wasmer/: Dockerfile
docker/wasmtime/: Dockerfile
eval/cov/: coverage-inspector.py  eval.sh  jsc-all-singlecore.sh  v8-all-singlecore.sh  wasmedge-all-singlecore.sh  wasmer-all-singlecore.sh  wasmtime-all-singlecore.sh  wasmtime-coverage-inspector.py
eval/diversity/: block-inspector-3d.py  eval.sh  instr-inspector-iqr.py  instr-inspector.py  ir-inspector-iqr.py  ir-inspector.py
eval/graphtool/: others-cov-reader.py  wasmtime-cov-reader.py
fuzz/eval/: eval-jsc-rgfuzz-cov.py  eval-rgfuzz-fairness.py  eval-rgfuzz-ir-fairness.py  eval-v8-rgfuzz-cov.py  eval-wasm-smith-fairness.py  eval-wasm-smith-ir-fairness.py  eval-wasmedge-rgfuzz-cov.py  eval-wasmer-rgfuzz-cov.py  eval-wasmer-xsmith-cov.py  eval-wasmtime-differential.py  eval-wasmtime-fuzzgen.py  eval-wasmtime-rgfuzz-cov.py  eval-wasmtime-wasm-mutate.py  eval-wasmtime-xsmith-cov.py  eval-xsmith-fairness.py  eval-xsmith-ir-fairness.py
fuzz/eval/ir-inspector/: Cargo.toml
fuzz/eval/ir-inspector/src/: main.rs
fuzz/executor/: config.py  engine.py  executor.py  fuzzer.py  main.py
fuzz/executor/codegen/: LICENSE  NOTE  components.py  encode.py  generator.py  genstream.py  instructions.py  rng.py  stackgen.py  template.js  xsmith-template.js
fuzz/extractor/: Cargo.toml  README.md
fuzz/extractor/refs/enum-iterator/enum-iterator/src/: lib.rs
fuzz/extractor/refs/wasm-ast/: Cargo.toml
fuzz/extractor/refs/wasm-ast/src/emitter/: instruction.rs  mod.rs  types.rs  values.rs
fuzz/extractor/refs/wasm-ast/src/model/: instruction.rs  types.rs
fuzz/extractor/src/: isle.rs  isle_cond.rs  isle_inl.rs  isle_lin.rs  isle_norm.rs  isle_subst.rs  isle_type.rs  main.rs  norm.rs  prod.rs  prod_extract.rs  prod_typing.rs  rule_match.rs  wasm_comp.rs  wasm_map.rs  wasm_norm.rs
fuzz/extractor/test/: get_venn_diagram.py  test.isle
targets/eval/xsmith/: .gitignore  LICENSE  README.md
targets/eval/xsmith/Notes/: addition_annotated.wat  func_notes.txt  looptest.wat  memory.md
targets/eval/xsmith/crc-debug/: crc_testing_instructions.md  globals.wat  main_return.wat  memory.wat
targets/eval/xsmith/crc-debug/node/: crc-test.js
targets/eval/xsmith/crc-debug/rust/crc-test/: Cargo.toml
targets/eval/xsmith/crc-debug/rust/crc-test/src/: main.rs
targets/eval/xsmith/node/: load-node.js  package.json
targets/eval/xsmith/playwright/: load-playwright.js  prefs.js  sock-puppet.js  wasm-webpage.html
targets/eval/xsmith/reduce/: clean.sh  compare.py  compare.sh  predicate.py
targets/eval/xsmith/reduce/nan-fighting-tools/: nan-test.sh  process-seeds.py  run-wasm-reduce.sh  seeds.txt  verify_bug.py
targets/eval/xsmith/wasmer/load-wasmer/: Cargo.toml
targets/eval/xsmith/wasmer/load-wasmer-2.3.0/: Cargo.toml
targets/eval/xsmith/wasmer/load-wasmer-2.3.0/src/: cranelift_optimizer_bug.wat  main.rs
targets/eval/xsmith/wasmer/load-wasmer-3.3.0/: Cargo.toml
targets/eval/xsmith/wasmer/load-wasmer/src/: main.rs
targets/eval/xsmith/wasmlike/: implemented-instructions.txt  optimization_predicate.sh  pretty_generate.sh  quick_test.sh  wasmlike.rkt
targets/eval/xsmith/wasmtime/load-wasmtime/: Cargo.toml
targets/eval/xsmith/wasmtime/load-wasmtime/src/: main.rs
targets/jsc/: build-cov.sh  build.sh  jsc_buildroot_extraconfig
targets/spidermonkey/: build-cov.sh  build.sh
targets/spidermonkey/mozconfigs/: coverage.arm  coverage.arm64  coverage.ia32  coverage.loong64  coverage.mips32  coverage.mips64  coverage.x64  debug.arm  debug.arm64  debug.ia32  debug.loong64  debug.mips32  debug.mips64  debug.x64  release.arm  release.arm64  release.ia32  release.loong64  release.mips32  release.mips64  release.x64
targets/v8/: build-cov.py  build-cov.sh  build.sh
targets/wasmedge/: CodeCoverage.cmake  build-cov.sh  build.sh
targets/wasmedge/wasmedge-wrapper/: Cargo.toml
targets/wasmedge/wasmedge-wrapper/src/: main.rs
targets/wasmer/: build-cov.sh  build.sh
targets/wasmer/wasmer-wrapper/: Cargo.toml
targets/wasmer/wasmer-wrapper/src/: main.rs
targets/wasmtime/: build-cov.sh  build.sh
targets/wasmtime/wasmtime-wrapper/: Cargo.toml
targets/wasmtime/wasmtime-wrapper/.cargo/: config.toml
targets/wasmtime/wasmtime-wrapper/src/: main.rs
