[package]
name = "ir-inspector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift-wasm = { path = "../../../targets/wasmtime/wasmtime/cranelift/wasm" }
cranelift-codegen = { path = "../../../targets/wasmtime/wasmtime/cranelift/codegen" }
target-lexicon = { version = "*" }
itertools = "0.10.5"
anyhow = "1.0"
