[package]
name = "wasmtime-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { path = "../wasmtime/crates/wasmtime" }
itertools = "0.10.5"
anyhow = "1.0"
rand = "0.8.5"
xxhash-rust = { version = "0.8.10", features = ["xxh3"] }
