[package]
name = "load-wasmer"
version = "0.1.0"
authors = ["Guy Watson <guy.watson@utah.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
crc = "2.1.0"
lazy_static = "1.4.0"
structopt = "0.3.21"

### Enable these for use on the testing machines (for fresh-built from source)
# wasmer = { path = "/local/work/wasmer/lib/api" }
# wasmer-compiler-singlepass = { path = "/local/work/wasmer/lib/compiler-singlepass" }
# wasmer-compiler-cranelift = { path = "/local/work/wasmer/lib/compiler-cranelift" }
# wasmer-compiler-llvm = { path = "/local/work/wasmer/lib/compiler-llvm" }
# wasmer-engine-universal = { path = "/local/work/wasmer/lib/engine-universal", features = ["compiler"] }
# wasmer-engine-dylib = { path = "/local/work/wasmer/lib/engine-dylib", features = ["compiler"] }

### Enable these for local development with an already set up rust environment
 wasmer = { version = "2.3.0" }
 wasmer-compiler-singlepass = { version = "2.3.0" }
 wasmer-compiler-cranelift = { version = "2.3.0" }
 wasmer-compiler-llvm = { version = "2.3.0" }
 wasmer-engine-universal = { version = "2.3.0", features = ["compiler"] }
 wasmer-engine-dylib = { version = "2.3.0", features = ["compiler"] }

### Enable these for use on my local machine 
#wasmer = { path = "/Users/GW/Documents/flux/wasmer/lib/api" }
#wasmer-compiler-singlepass = { path = "/Users/GW/Documents/flux/wasmer/lib/compiler-singlepass" }
#wasmer-compiler-cranelift = { path = "/Users/GW/Documents/flux/wasmer/lib/compiler-cranelift" }
#wasmer-compiler-llvm = { path = "/Users/GW/Documents/flux/wasmer/lib/compiler-llvm" }
#wasmer-engine-universal = { path = "/Users/GW/Documents/flux/wasmer/lib/engine-universal", features = ["compiler"] }
#wasmer-engine-dylib = { path = "/Users/GW/Documents/flux/wasmer/lib/engine-dylib", features = ["compiler"] }

