[package]
name = "load-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { path = "../../../../wasmtime/wasmtime/crates/wasmtime" }
structopt = "0.3.25"
crc = "2.1.0"
anyhow = "1.0.51"
